tests/ui/parser/let-chains-assign-add-incorrect.stderr
error: expected expression, found `let` statement
  --> $DIR/let-chains-assign-add-incorrect.rs:5:8
   |
LL |     if let x = 1 && true && y += 2 {};
   |        ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions

error: expected expression, found `let` statement
  --> $DIR/let-chains-assign-add-incorrect.rs:18:8
   |
LL |     if let x = 1 && y += 2 {};
   |        ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions

error[E0308]: mismatched types
  --> $DIR/let-chains-assign-add-incorrect.rs:5:29
   |
LL |     if let x = 1 && true && y += 2 {};
   |        -----------------    ^ expected `bool`, found integer
   |        |
   |        expected because this is `bool`

error[E0368]: binary assignment operation `+=` cannot be used in a let chain
  --> $DIR/let-chains-assign-add-incorrect.rs:5:31
   |
LL |     if let x = 1 && true && y += 2 {};
   |                               ^^ cannot use `+=` in a let chain
   |
help: you might have meant to compare with `==` instead of assigning with `+=`
   |
LL -     if let x = 1 && true && y += 2 {};
LL +     if let x = 1 && true && y == 2 {};
   |

error[E0308]: mismatched types
  --> $DIR/let-chains-assign-add-incorrect.rs:18:21
   |
LL |     if let x = 1 && y += 2 {};
   |                     ^ expected `bool`, found integer

error[E0368]: binary assignment operation `+=` cannot be used in a let chain
  --> $DIR/let-chains-assign-add-incorrect.rs:18:23
   |
LL |     if let x = 1 && y += 2 {};
   |                       ^^ cannot use `+=` in a let chain
   |
help: you might have meant to compare with `==` instead of assigning with `+=`
   |
LL -     if let x = 1 && y += 2 {};
LL +     if let x = 1 && y == 2 {};
   |

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0368.
For more information about an error, try `rustc --explain E0308`.
